--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   }
 </style>
 
-<body>
+<body class="antialiased bg-gray-200">
   <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
       Please enable it to continue.</strong>
